<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Shader Editor</string>
	<string name="description">Write your own live wallpaper</string>
	<string name="add_shader">New shader</string>
	<string name="duplicate_shader">Save as new shader</string>
	<string name="delete_shader">Delete shader</string>
	<string name="save_shader">Save shader</string>
	<string name="share_shader">Share shader</string>
	<string name="are_you_sure">Are you sure you want to delete this shader?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="preferences">Preferences</string>
	<string name="wallpaper">Wallpaper</string>
	<string name="sensors">Sensors</string>
	<string name="sensor_delay">Sensor Delay</string>
	<string name="sensor_delay_summary">Rate of sensor events</string>
	<string name="shader">Shader</string>
	<string name="shader_summary">Choose a shader</string>
	<string name="editor">Editor</string>
	<string name="compile_on_change">Compile on change</string>
	<string name="compile_on_change_summary">Disable to compile on save only</string>
	<string name="show_fps_gauge">Show FPS Gauge</string>
	<string name="show_fps_gauge_summary">Show frames per second</string>
	<string name="update_delay">Update delay</string>
	<string name="update_delay_summary">Update editor (and compile) after that much time of inactivity</string>
	<string name="text_size">Text size</string>
	<string name="text_size_summary">Text size of editor</string>
</resources>
