<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/preferences"
	android:key="preferences">
	<PreferenceCategory
		android:title="@string/wallpaper"
		android:key="wallpaper_preferences">
		<de.markusfisch.android.shadereditor.ShaderListPreference
			android:key="shader"
			android:title="@string/shader"
			android:summary="@string/shader_summary"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/editor"
		android:key="editor_preferences">
		<CheckBoxPreference
			android:key="compile_on_change"
			android:title="@string/compile_on_change"
			android:summary="@string/compile_on_change_summary"
			android:checked="true"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:key="show_fps"
			android:title="@string/show_fps"
			android:summary="@string/show_fps_summary"
			android:checked="false"
			android:defaultValue="false"/>
	</PreferenceCategory>
</PreferenceScreen>
